--- a/houseapp/templates/houseapp/index.html
+++ b/houseapp/templates/houseapp/index.html
@@ -4,15 +4,17 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <title>HouseApp</title>
+
     <!------ Include the above in your HEAD tag ---------->
 </head>
 
-<body>
+<body style="background-color: paleturquoise;">
     <div class="container">
         <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    <div class="panel-title">ตรวจ houseapp</div>
+                    <div class="panel-title">HouseApp</div>
                 </div>
 
                 <div style="padding-top:30px" class="panel-body">
@@ -62,7 +64,7 @@
 
                         <div style="margin-top:10px" class="form-group">
                             <div class="col-sm-12 controls">
-                                <button type="submit" id="btn-login" class="btn btn-success">house price of unit area</button>
+                                <button type="submit" id="btn-login" class="btn btn-success">Price</button>
                                 <a id="btn-fblogin" href="#" class="btn btn-primary">{{ result }}</a>
                             </div>
                         </div>
